--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
 	"monolog/monolog"  : "1.0.*",
-	"flatnine/satisfy" : "dev-master"
+	"flatnine/satisfy" : "dev-master",
+	"phpunit/phpunit": "3.7.31"
     },
     "autoload": {
         "psr-0": {"Flatnine": "src/"}
