--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
  <property name="message" value="Build Test"/>
  <target name="welcome">
   <echo msg="${message}"/>
-  <exec command="composer update" passthru="true"/>
+  <exec command="/usr/local/bin/composer update" passthru="true"/>
   <exec command="#rsync -av web/ www-data@satis.d:/var/www/satis/" passthru="true" />
  </target>
 </project>
