--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
   <exec command="/usr/local/bin/composer update" passthru="true"/>
   <exec command="#rsync -av web/ www-data@satis.d:/var/www/satis/" passthru="true" />
  </target>
- <target name="Tests">
+ <target name="tests">
   <exec command="phpunit" passthru="true"/>
  </target>
 </project>
